--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <div id="title-screen" class="flex-center flex-column">
                <h1>Coding Quiz</h1>
                <button id="start-quiz" class="button">Start Quiz</button>
-               <a id="high-scores" href="/high-scores.html">High Scores</a>
+               <a id="high-scores" href="./high-scores.html">High Scores</a>
            </div>
        </div>
         
