--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
            <div id="title-screen" class="flex-center flex-column">
                <h1>Coding Quiz</h1>
                <button id="start-quiz" class="button">Start Quiz</button>
+               <p id="question-box"></p>
+               <p id="answer-box-1" class="answer-box" data-number="1"></p>
+               <p id="answer-box-2" class="answer-box" data-number="2"></p>
+               <p id="answer-box-3" class="answer-box" data-number="3"></p>
+               <p id="answer-box-4" class="answer-box" data-number="4"></p>
                <a id="high-scores" href="./high-scores.html">High Scores</a>
            </div>
        </div>
