--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </div>
        </header>
         <div class="container">
-           <!-- CHECK FOR USE OF FLEX-CENTER AND FLEX-COLUMN CLASSES -->
-           <div id="title-screen" class="flex-center flex-column">
+           <div id="title-screen">
                <h1>Coding Quiz</h1>
                <button id="start-quiz">Start Quiz</button>
                <p id="question-box"></p>
